# NeoOracleMvp

./: .gitignore  Cargo.toml  README.md  known_price_objects.json
config/: default.toml
src/: aggregator.rs  binance_client.rs  coinbase_client.rs  config.rs  main.rs  sui_client.rs  sui_publisher.rs
test_config_load_env/: default.toml
